<resources>
    <string name="app_name">Food Delivery</string>
    <string name="location_restaurant">To provide you with the best dining experience we need your permission on access your device\'s location. By enabling location services, we can offer personlized restaurant recommendation, accurate delivery estimates, and ensure a seamless food delivery experience</string>
    <string name="choose_your_location">Choose Your Location</string>
    <string name="choose_location">Choose Location</string>
    <string name="continue_with_this_country">Are you sure want to start a new activity with the selected location?</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="Explore_Your_Favorite_Food">Explore Your Favorite Food</string>
    <string name="confirmation">Confirmation/</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="popular">Popular</string>
    <string name="view_menu">View Menu</string>
    <string name="food_name">Food Name</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="short_description">Short Description</string>
    <string name="description_fast_food">Fast food is a type of mass-produced food designed for commercial resale, with a strong priority placed on speed of service. It is a commercial term, limited to food sold in a restaurant or store with frozen, preheated or precooked ingredients and served in packaging for take-out/takeaway</string>
    <string name="ingredients">Ingredients</string>
    <string name="strawberry">* Strawberry\n* Cream\n* Wheal</string>
    <string name="menu">Menu</string>
    <string name="cart">Cart</string>
    <string name="proceed">Proceed</string>
    <string name="edit">Edit</string>
    <string name="name">Name</string>
    <string name="fio">Фамилия Имя</string>
    <string name="address">Укажите адресс</string>
    <string name="address_name">Address</string>
    <string name="phone">Phone</string>
    <string name="phone_number">Укажите телефон</string>
    <string name="congrats_your_order_placed">Congrats \nYour Order Placed</string>
</resources>