<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="15dp"
    android:background="#F1E8E8"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirmation"
            android:textSize="28sp"
            android:layout_marginTop="12dp"
            android:layout_marginStart="8dp"
            android:textStyle="bold"
            android:textColor="@color/endGreenColor"
            android:fontFamily="@font/yeonsung"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_margin="8dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:fontFamily="@font/lato"
            android:text="@string/continue_with_this_country"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="16dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_cancel"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/btn_green_90"
                android:textColor="@color/white"
                android:text="@string/cancel"
                android:textSize="16sp"
                android:elevation="2dp"
                android:outlineAmbientShadowColor="@color/endGreenColor"
                android:outlineSpotShadowColor="@color/startGreenColor"
                android:fontFamily="@font/yeonsung"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_yes"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/btn_green_90"
                android:textColor="@color/white"
                android:text="@string/yes"
                android:textSize="16sp"
                android:elevation="2dp"
                android:outlineAmbientShadowColor="@color/endGreenColor"
                android:outlineSpotShadowColor="@color/startGreenColor"
                android:fontFamily="@font/yeonsung"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>
    
</androidx.cardview.widget.CardView>